# ModbusProtocolLibrary

./: CMakeLists.txt  Makefile  ModbusDocumentation.docx  README.md  documentation.docx
modbus-lib/: CMakeLists.txt  Makefile
modbus-lib/examples/client/: main.cpp
modbus-lib/examples/server/: main.cpp  register_map.h
modbus-lib/include/modbus/: IModbusTransport.h  ModbusClient.h  ModbusError.h  ModbusFrame.h  ModbusServer.h  ModbusTypes.h  RegisterMap.h
modbus-lib/src/: CrcEngine.cpp  CrcEngine.h  ModbusClient.cpp  ModbusFrameCodec.cpp  ModbusFrameCodec.h  ModbusServer.cpp  RegisterMap.cpp
modbus-lib/tests/: test_client.cpp  test_crc  test_crc.cpp  test_crc_results.txt  test_frame_codec  test_frame_codec.cpp  test_integration.cpp  test_server.cpp  test_tcp_codec.cpp
modbus-lib/tests/mocks/: MockTransport.h
modbus-lib/transport/: UartTransport_Linux.cpp
modbus-lib/transport/include/: UartTransport.h
